js/js.translator/testData/incremental/invalidation/crossModuleReferences/lib2/l2.4.kt
fun qux() = baz("test") + baz(true)
